# coi-evert

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  COPYING  README.md  build_docs.sh  pyproject.toml
docs/: changelog.rst  conf.py  guide.rst  index.rst
docs/api/: asynch.rst  channel.rst  index.rst  rendezvous.rst  synch.rst  utils.rst
docs/examples/: example.rst  index.rst
examples/: example.py
src/cernml/evert/: __init__.py  _async.py  _runner.py  _sync.py  _types.py  asynch.py  channel.py  rendezvous.py  synch.py
tests/: test_async.py  test_asynch.py  test_channel.py  test_rendezvous.py  test_sync.py  test_synch.py
