# SPDX-FileCopyrightText: 2020-2023 CERN
# SPDX-FileCopyrightText: 2023 GSI Helmholtzzentrum für Schwerionenforschung
# SPDX-FileNotice: All rights not expressly granted are reserved.
#
# SPDX-License-Identifier: GPL-3.0-or-later OR EUPL-1.2+

[build-system]
requires = [
    'setuptools >= 45',
    'setuptools-scm[toml] ~= 7.0',
    'wheel',
]
build-backend = 'setuptools.build_meta'

[project]
dynamic = ['version']
name = 'cernml-coi-evert'
authors = [
    {name = 'Nico Madysa', email = 'nico.madysa@cern.ch'},
]
description = 'Turn optimization loops inside out'
readme = 'README.md'
license = {file='COPYING'}
requires-python = '>=3.7'
dependencies = [
    'typing-extensions; python_version < "3.10"',
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Physics',
    'Typing :: Typed',
]

[project.optional-dependencies]
examples = [
    'cernml-coi ~= 0.8.13',
    'cernml-coi-optimizers ~= 1.1',
    'numpy ~= 1.20',
    'scipy ~= 1.1',
]
[tool.setuptools]
zip-safe = true
package-data = {'*' = ['py.typed']}

[tool.setuptools_scm]

[tool.black]
target-version = ['py37', 'py38', 'py39']

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
addopts = '--doctest-modules'
testpaths = ['src', 'tests']
asyncio_mode = 'auto'
doctest_optionflags = ['IGNORE_EXCEPTION_DETAIL']
markers = [
    'slow: marks tests as slow (deselect with `-m "not slow"`)'
]

[tool.coverage.run]
source = ['src/']
omit = ['src/cernml/evert/_runner.py']
branch = true

[tool.coverage.report]
exclude_also = [
    '^\s*from .* import',
    '^\s*import ',
    'if \w*\.TYPE_CHECKING',
    '^\s*\.\.\.$',
    'raise NotImplementedError',
]

[tool.pylint.main]
ignore-patterns = ['.*\.pyi$', 'test_.*\.py$']

[tool.pylint.basic]
good-names = ['i', 'j', 'k', 'x0', '_']

[tool.pylint.'messages control']
disable = [
    'fixme',
    'line-too-long',
    'similarities',
    'unbalanced-tuple-unpacking',
    'unpacking-non-sequence',
    'unsubscriptable-object',
]

[tool.mypy]
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = '$MYPY_CONFIG_FILE_DIR/src'

[[tool.mypy.overrides]]
module = ['scipy.*', 'gym.*', 'matplotlib.*']
ignore_missing_imports = true
